--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  flutter_localizations:
+    sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - data/menu_opts.json
+    - data/menu_headers.json
     - assets/
   #   - images/a_dot_ham.jpeg
 
